--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^12.12.56",
     "apollo-boost": "^0.4.9",
     "classnames": "^2.2.6",
+    "firebase": "^8.2.4",
     "graphql": "^15.3.0",
     "graphql-tag": "^2.11.0",
     "history": "^5.0.0",
